--- a/demo/src/main/resources/templates/index.html
+++ b/demo/src/main/resources/templates/index.html
@@ -1,11 +1,11 @@
 <html lang="zh">
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
     <title>amis demo</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-    <link rel="stylesheet" href="/amis/sdk.min.css" />
+    <meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport"/>
+    <meta content="IE=Edge" http-equiv="X-UA-Compatible"/>
+    <link href="/amis/sdk.min.css" rel="stylesheet"/>
     <style>
     html,
     body,
@@ -22,14 +22,15 @@
       width: 100%;
       height: 100%;
     }
-  </style>
+
+    </style>
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
 <body class="amis-scope">
-    <div id="root" class="app-wrapper"></div>
-    <script src="/amis/sdk.min.js"></script>
-    <script type="text/javascript">
+<div class="app-wrapper" id="root"></div>
+<script src="/amis/sdk.min.js"></script>
+<script type="text/javascript">
 
     var me;
     const pageUrl = window.location.href.replace("\.html",".page");
@@ -88,7 +89,8 @@
 
 
     })();
-  </script>
+
+</script>
 </body>
 
 </html>
